# tiny-rasterizer

./: CMakeLists.txt
include/rasterizer/: attribute.hpp  color.hpp  draw_command.hpp  image_view.hpp  matrix.hpp  mesh.hpp  renderer.hpp  settings.hpp  types.hpp  vector.hpp  viewport.hpp
source/: main.cpp  renderer.cpp
